kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lingolearn
  namespace: lingolearn
  labels:
    app: lingolearn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lingolearn
  template:
    metadata:
      labels:
        app: lingolearn
    spec:
      containers:
        - name: lingolearn
          # {"$imagescan": "lingolearn-image"}
          image: ghcr.io/willuhmjs/lingolearn:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '512Mi'
              cpu: '500m'
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: 'true'
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: 'sticky-session'
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: 'true'
  labels:
    app: lingolearn
  name: lingolearn
  namespace: lingolearn
spec:
  ports:
    - name: website
      port: 3000
  selector:
    app: lingolearn
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cs-dns-cluster
  name: lingolearn
  namespace: lingolearn
spec:
  ingressClassName: traefik
  rules:
    - host: german.will.net
      http:
        paths:
          - backend:
              service:
                name: lingolearn
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - german.will.net
      secretName: lingolearn-tls
